--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -37,6 +37,25 @@
         <maven.compiler.target>${target.java.version}</maven.compiler.target>
         <log4j.version>2.17.1</log4j.version>
         <weixin-java>4.5.3.B</weixin-java>
+        <mysql.version.8>8.0.27</mysql.version.8>
+        <mysql.version.5>5.1.35</mysql.version.5>
+        <hutool.version>5.7.15</hutool.version>
+        <guava.version>31.0.1-jre</guava.version>
+        <okhttp.version>4.9.2</okhttp.version>
+        <fastjson.version>1.2.83</fastjson.version>
+        <tencentcloud-sdk.version>3.1.510</tencentcloud-sdk.version>
+        <log-record.version>1.0.4.1</log-record.version>
+        <javax.mail.version>1.6.2</javax.mail.version>
+        <springfox.version>3.0.0</springfox.version>
+        <graylog.version>3.0.0</graylog.version>
+        <alipay-java.version>4.33.39.ALL</alipay-java.version>
+        <alibaba-dingtalk-service.version>2.0.0</alibaba-dingtalk-service.version>
+
+        <!--unmount-->
+        <nacos.version>0.2.12</nacos.version>
+        <apollo.version>2.1.0</apollo.version>
+        <xxl-job-core.version>2.3.0</xxl-job-core.version>
+        <rocketmq.version>2.2.2</rocketmq.version>
     </properties>
 
     <dependencyManagement>
@@ -45,42 +64,42 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.35</version>
+                <version>${mysql.version.8}</version>
             </dependency>
 
             <!--hutool工具包-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>5.7.15</version>
+                <version>${hutool.version}</version>
             </dependency>
 
             <!--guava工具包-->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>31.0.1-jre</version>
+                <version>${guava.version}</version>
             </dependency>
 
             <!--http库-->
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
-                <version>4.9.2</version>
+                <version>${okhttp.version}</version>
             </dependency>
 
             <!--fastjson包-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.83</version>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <!--腾讯sdk(目前用在短信上)-->
             <dependency>
                 <groupId>com.tencentcloudapi</groupId>
                 <artifactId>tencentcloud-sdk-java</artifactId>
-                <version>3.1.510</version>
+                <version>${tencentcloud-sdk.version}</version>
             </dependency>
 
             <!--配置中心(目前未接入)-->
@@ -88,7 +107,7 @@
             <dependency>
                 <groupId>com.alibaba.boot</groupId>
                 <artifactId>nacos-config-spring-boot-starter</artifactId>
-                <version>0.2.12</version>
+                <version>${nacos.version}</version>
             </dependency>
 
             <!--apollo-->
@@ -102,21 +121,21 @@
             <dependency>
                 <groupId>cn.monitor4all</groupId>
                 <artifactId>log-record-starter</artifactId>
-                <version>1.0.4.1</version>
+                <version>${log-record.version}</version>
             </dependency>
 
             <!--邮件发送-->
             <dependency>
                 <groupId>com.sun.mail</groupId>
                 <artifactId>javax.mail</artifactId>
-                <version>1.6.2</version>
+                <version>${javax.mail.version}</version>
             </dependency>
 
             <!--swagger-->
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
-                <version>3.0.0</version>
+                <version>${springfox.version}</version>
             </dependency>
 
 
@@ -124,14 +143,14 @@
             <dependency>
                 <groupId>de.siegmar</groupId>
                 <artifactId>logback-gelf</artifactId>
-                <version>3.0.0</version>
+                <version>${graylog.version}</version>
             </dependency>
 
             <!--xxl-job分布式定时任务-->
             <dependency>
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
-                <version>2.3.0</version>
+                <version>${xxl-job-core.version}</version>
             </dependency>
 
             <!--flink相关依赖-->
@@ -200,21 +219,21 @@
             <dependency>
                 <groupId>com.alipay.sdk</groupId>
                 <artifactId>alipay-sdk-java</artifactId>
-                <version>4.33.39.ALL</version>
+                <version>${alipay-java.version}</version>
             </dependency>
 
             <!--阿里云 钉钉 SDK-->
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>alibaba-dingtalk-service-sdk</artifactId>
-                <version>2.0.0</version>
+                <version>${alibaba-dingtalk-service.version}</version>
             </dependency>
 
             <!--rocketmq-->
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
-                <version>2.2.2</version>
+                <version>${rocketmq.version}</version>
             </dependency>
 
             <!-- hades规则引擎：https://github.com/ZhongFuCheng3y/hades -->
