--- a/DoPush-Server/push-domain/pom.xml
+++ b/DoPush-Server/push-domain/pom.xml
@@ -10,6 +10,24 @@
     </parent>
 
     <artifactId>push-domain</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.sadalsuud.push</groupId>
+            <artifactId>push-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <!--暂时使用, 接入nacos后可移除-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
