--- a/DoPush-Server/push-starter/src/main/resources/application-dev.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ dopush.nacos.enabled=false
 dopush.rule.engine.enabled=false
 
 # TODO if windows os and need upload file to send message  ,replace path !
-dopush.business.upload.crowd.path=/Users/3y/temp
+dopush.business.upload.crowd.path=/Users/long1/Desktop/DopushTemp
 
 
 
