--- a/DoPush-Server/push-domain/pom.xml
+++ b/DoPush-Server/push-domain/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>javax.mail</artifactId>
         </dependency>
 
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
