feat: 使用JPA实现仓储并通过测试 fix: 修复handler和依赖

--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.profiles.active=dev
 spring.application.name=dopush
+spring.jpa.open-in-view=false
+
 
 ########################################## database start ##########################################
 # TODO required!
@@ -47,4 +49,88 @@ dopush.business.tagId.key=kafka_tag_id
 dopush.business.tagId.value=com.java3y.dopush.3y
 ########################################## kafka end ##########################################
 
+########################################## rocketMq start ##########################################
+rocketmq.name-server=${dopush.rocketmq.nameserver.ip:}:${dopush.rocketmq.nameserver.port:}
+rocketmq.producer.group=unique-producer-group
+dopush.rocketmq.biz.consumer.group=unique-biz-consumer-group
+dopush.rocketmq.recall.consumer.group=unique-recall-consumer-group
+########################################## rocketMq end ##########################################
+
+
+########################################## RabbitMq start ##########################################
+spring.rabbitmq.host=${dopush.rabbitmq.ip:}
+spring.rabbitmq.port=${dopush.rabbitmq.port:}
+spring.rabbitmq.username=root
+spring.rabbitmq.password=123456
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.virtual-host=/
+dopush.rabbitmq.topic.name=dopushRabbit
+dopush.rabbitmq.exchange.name=dopush.point
+spring.rabbitmq.queues=dopush_queues
+dopush.rabbitmq.routing.key=dopush_KEY
+########################################## RabbitMq end ##########################################
+
+
+########################################## xxl start ##########################################
+xxl.job.admin.addresses=http://${dopush.xxl.job.ip:dopush-xxl-job}:${dopush.xxl.job.port:8080}/xxl-job-admin
+xxl.job.admin.username=${dopush.xxl.job.username:admin}
+xxl.job.admin.password=${dopush.xxl.job.password:123456}
+xxl.job.executor.appname=${dopush.xxl.job.executor.appname:dopush}
+xxl.job.executor.jobHandlerName=${dopush.xxl.job.executor.jobHandlerName:dopushJob}
+xxl.job.executor.address=${dopush.xxl.job.address:}
+xxl.job.executor.ip=
+xxl.job.executor.port=${dopush.xxl.executor.port:6666}
+xxl.job.executor.logpath=logs/xxl
+xxl.job.executor.logretentiondays=30
+xxl.job.accessToken=${dopush.xxl.job.accessToken:}
+########################################## xxl end ##########################################
+
+########################################## apollo start ##########################################
+app.id=dopush
+apollo.bootstrap.enabled=${dopush.apollo.enabled}
+apollo.bootstrap.namespaces=${dopush.default.apollo.namespace:boss.dopush},dynamic-tp-apollo-dtp.yml
+########################################## apollo end ##########################################
+
+########################################## nacos start ##########################################
+nacos.config.server-addr=${dopush.nacos.addr.ip:dopush-nacos}:${dopush.nacos.addr.port:8848}
+nacos.config.username=${dopush.nacos.username:nacos}
+nacos.config.password=${dopush.nacos.password:nacos}
+nacos.config.namespace=${dopush.nacos.namespace:hades}
+nacos.config.enabled=${dopush.nacos.enabled}
+
+nacos.data-id=${dopush.nacos.dataId:dopush}
+nacos.group=${dopush.nacos.group:DEFAULT_GROUP}
+########################################## nacos end ##########################################
+
+########################################## rule Engine start ##########################################
+hades.enabled=${dopush.rule.engine.enabled:false}
+hades.config-name=${dopush.rule.engine.file-name:hades}
+########################################## rule Engine end ##########################################
+
+########################################## log start ##########################################
+dopush.graylog.ip=${dopush.graylog:dopush-graylog}
+########################################## log end ##########################################
+
+
+########################################## httpUtils start ##########################################
+ok.http.connect-timeout=30
+ok.http.keep-alive-duration=300
+ok.http.max-idle-connections=200
+ok.http.read-timeout=30
+ok.http.write-timeout=30
+########################################## httpUtils end ##########################################
+
+########################################## monitor start ##########################################
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=*
+management.metrics.export.prometheus.enabled=true
+management.health.rabbit.enabled=false
+########################################## monitor end ##########################################
+
+########################################## system start ##########################################
+server.shutdown=graceful
+########################################## system end ##########################################
 
