--- a/DoPush-Server/push-adapter/pom.xml
+++ b/DoPush-Server/push-adapter/pom.xml
@@ -10,4 +10,26 @@
     </parent>
 
     <artifactId>push-adapter</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.sadalsuud.push</groupId>
+            <artifactId>push-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <!--swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
