--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -23,9 +23,10 @@ spring.datasource.hikari.validation-timeout=1000
 
 ########################################## redis start ##########################################
 # TODO required!
-spring.redis.host=${dopush.redis.ip:dopush-redis}
+#spring.redis.host=${dopush.redis.ip:dopush-redis}
+spring.redis.host=${dopush.redis.ip:192.168.59.128}
 spring.redis.port=${dopush.redis.port:6379}
-spring.redis.password=${dopush.redis.password:dopush}
+spring.redis.password=${dopush.redis.password:123456}
 ########################################## redis end ##########################################
 
 
