feat: 接入日志和Gary log, 忽略上传logs目录

--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -129,6 +129,13 @@
                 <version>${weixin-java}</version>
             </dependency>
 
+            <!--graylog-->
+            <dependency>
+                <groupId>de.siegmar</groupId>
+                <artifactId>logback-gelf</artifactId>
+                <version>${graylog.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
