--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -110,7 +110,7 @@ hades.config-name=${dopush.rule.engine.file-name:hades}
 ########################################## rule Engine end ##########################################
 
 ########################################## log start ##########################################
-dopush.graylog.ip=${dopush.graylog:dopush-graylog}
+dopush.graylog.ip=${dopush.graylog:192.168.59.128}
 ########################################## log end ##########################################
 
 
