--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.jpa.open-in-view=false
 
 ########################################## database start ##########################################
 # TODO required!
-spring.datasource.url=jdbc:mysql://${dopush.database.ip:localhost}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://${dopush.database.ip:localhost}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://${dopush.database.ip:192.168.59.128}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=${dopush.database.username:root}
 spring.datasource.password=${dopush.database.password:123123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -31,7 +32,8 @@ spring.redis.password=${dopush.redis.password:123456}
 
 
 ########################################## kafka start ##########################################
-spring.kafka.bootstrap-servers=${dopush.kafka.ip:dopush-kafka}:${dopush.kafka.port:9092}
+#spring.kafka.bootstrap-servers=${dopush.kafka.ip:dopush-kafka}:${dopush.kafka.port:9092}
+spring.kafka.bootstrap-servers=${dopush.kafka.ip:192.168.59.128}:${dopush.kafka.port:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -94,7 +96,8 @@ apollo.bootstrap.namespaces=${dopush.default.apollo.namespace:boss.dopush},dynam
 ########################################## apollo end ##########################################
 
 ########################################## nacos start ##########################################
-nacos.config.server-addr=${dopush.nacos.addr.ip:dopush-nacos}:${dopush.nacos.addr.port:8848}
+#nacos.config.server-addr=${dopush.nacos.addr.ip:dopush-nacos}:${dopush.nacos.addr.port:8848}
+nacos.config.server-addr=${dopush.nacos.addr.ip:192.168.59.128}:${dopush.nacos.addr.port:8848}
 nacos.config.username=${dopush.nacos.username:nacos}
 nacos.config.password=${dopush.nacos.password:nacos}
 nacos.config.namespace=${dopush.nacos.namespace:hades}
