--- a/DoPush-Server/push-infrastructure/pom.xml
+++ b/DoPush-Server/push-infrastructure/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>weixin-java-miniapp</artifactId>
         </dependency>
 
+        <!--kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
