--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.jpa.open-in-view=false
 ########################################## database start ##########################################
 # TODO required!
 #spring.datasource.url=jdbc:mysql://${dopush.database.ip:localhost}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:mysql://${dopush.database.ip:192.168.59.128}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://${dopush.database.ip:www.dopush.com}:${dopush.database.port:3306}/dopush?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=${dopush.database.username:root}
 spring.datasource.password=${dopush.database.password:123123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=30
 spring.datasource.hikari.auto-commit=true
@@ -25,7 +25,7 @@ spring.datasource.hikari.validation-timeout=1000
 ########################################## redis start ##########################################
 # TODO required!
 #spring.redis.host=${dopush.redis.ip:dopush-redis}
-spring.redis.host=${dopush.redis.ip:192.168.59.128}
+spring.redis.host=${dopush.redis.ip:www.dopush.com}
 spring.redis.port=${dopush.redis.port:6379}
 spring.redis.password=${dopush.redis.password:123456}
 ########################################## redis end ##########################################
@@ -33,7 +33,7 @@ spring.redis.password=${dopush.redis.password:123456}
 
 ########################################## kafka start ##########################################
 #spring.kafka.bootstrap-servers=${dopush.kafka.ip:dopush-kafka}:${dopush.kafka.port:9092}
-spring.kafka.bootstrap-servers=${dopush.kafka.ip:192.168.59.128}:${dopush.kafka.port:9092}
+spring.kafka.bootstrap-servers=${dopush.kafka.ip:www.dopush.com}:${dopush.kafka.port:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -49,7 +49,8 @@ dopush.business.log.topic.name=dopushTraceLog
 dopush.business.recall.group.name=recallGroupId
 ### TODO kafka tag filter,if you need, replace  tagIdValue ,eg:com.java3y.dopush.yyy
 dopush.business.tagId.key=kafka_tag_id
-dopush.business.tagId.value=com.sadalsuud.dopush.sadalsuud
+#dopush.business.tagId.value=com.sadalsuud.dopush.sadalsuud
+dopush.business.tagId.value=
 ########################################## kafka end ##########################################
 
 ########################################## rocketMq start ##########################################
@@ -97,7 +98,7 @@ apollo.bootstrap.namespaces=${dopush.default.apollo.namespace:boss.dopush},dynam
 
 ########################################## nacos start ##########################################
 #nacos.config.server-addr=${dopush.nacos.addr.ip:dopush-nacos}:${dopush.nacos.addr.port:8848}
-nacos.config.server-addr=${dopush.nacos.addr.ip:192.168.59.128}:${dopush.nacos.addr.port:8848}
+nacos.config.server-addr=${dopush.nacos.addr.ip:www.dopush.com}:${dopush.nacos.addr.port:8848}
 nacos.config.username=${dopush.nacos.username:nacos}
 nacos.config.password=${dopush.nacos.password:nacos}
 nacos.config.namespace=${dopush.nacos.namespace:hades}
@@ -113,7 +114,7 @@ hades.config-name=${dopush.rule.engine.file-name:hades}
 ########################################## rule Engine end ##########################################
 
 ########################################## log start ##########################################
-dopush.graylog.ip=${dopush.graylog:192.168.59.128}
+dopush.graylog.ip=${dopush.graylog:www.dopush.com}
 ########################################## log end ##########################################
 
 
