feat: 添加线程池关闭机制和引入OK HTTP

--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -148,6 +148,13 @@
 <!--                <version>${flink.version}</version>-->
 <!--            </dependency>-->
 
+            <!--http库-->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
