--- a/DoPush-Server/push-infrastructure/pom.xml
+++ b/DoPush-Server/push-infrastructure/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!--HTTP工具 - 短信等业务的发送和回执-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
