fix: 添加Tencent SDK & 调整消息上链包名

--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -155,6 +155,13 @@
                 <version>${okhttp.version}</version>
             </dependency>
 
+            <!--腾讯sdk(目前用在短信上)-->
+            <dependency>
+                <groupId>com.tencentcloudapi</groupId>
+                <artifactId>tencentcloud-sdk-java</artifactId>
+                <version>${tencentcloud-sdk.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
