--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -19,6 +19,7 @@
         <module>push-rpc</module>
         <module>push-starter</module>
         <module>push-client</module>
+        <module>push-stream</module>
     </modules>
 
     <parent>
