--- a/DoPush-Server/push-stream/pom.xml
+++ b/DoPush-Server/push-stream/pom.xml
@@ -65,6 +65,7 @@
                                     <!-- 不要拷贝 META-INF 目录下的签名，否则会引起 SecurityExceptions 。 -->
                                     <artifact>*:*</artifact>
                                     <excludes>
+                                        <exclude>module-info.class</exclude>
                                         <exclude>META-INF/*.SF</exclude>
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
@@ -88,7 +89,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.java3y.austin.stream.AustinBootStrap</mainClass>
+                                    <mainClass>com.sadalsuud.push.stream.StreamBootStrap</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
