--- a/DoPush-Server/push-starter/src/main/resources/application-dev.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # TODO  choose : [kafka]/[eventBus]/[rocketMq]/[rabbitMq]/[springEventBus],recommend  [eventBus] or  [kafka]
-dopush.mq.pipeline=eventBus
+dopush.mq.pipeline=kafka
 
 # todo [xxl-job] switch
 dopush.xxl.job.enabled=false
