--- a/DoPush-Server/push-domain/pom.xml
+++ b/DoPush-Server/push-domain/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>dysmsapi20170525</artifactId>
         </dependency>
 
+        <!--阿里云 钉钉 SDK-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
