--- a/DoPush-Server/pom.xml
+++ b/DoPush-Server/pom.xml
@@ -185,6 +185,13 @@
                 <version>${alibaba-dingtalk-service.version}</version>
             </dependency>
 
+            <!-- xxl-job定时任务 -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job-core.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
