--- a/DoPush-Server/push-infrastructure/pom.xml
+++ b/DoPush-Server/push-infrastructure/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>2.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.sadalsuud.push</groupId>
+            <artifactId>push-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
