fix: 使用本地xxl-job并配置

--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -78,7 +78,7 @@ dopush.rabbitmq.routing.key=dopush_KEY
 
 ########################################## xxl start ##########################################
 #xxl.job.admin.addresses=http://${dopush.xxl.job.ip:www.dopush.com}:${dopush.xxl.job.port:8080}/xxl-job-admin
-xxl.job.admin.addresses=http://${dopush.xxl.job.ip:www.dopush.com}:${dopush.xxl.job.port:6767}/xxl-job-admin
+xxl.job.admin.addresses=http://${dopush.xxl.job.ip:localhost}:${dopush.xxl.job.port:6767}/xxl-job-admin
 xxl.job.admin.username=${dopush.xxl.job.username:admin}
 xxl.job.admin.password=${dopush.xxl.job.password:123123}
 xxl.job.executor.appname=${dopush.xxl.job.executor.appname:dopush}
