fix: 修复并启用xxl-job 修改人群文件上传路径

--- a/DoPush-Server/push-starter/src/main/resources/application-dev.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-server.port=8081
+server.port=8080
 
 # TODO  choose : [kafka]/[eventBus]/[rocketMq]/[rabbitMq]/[springEventBus],recommend  [eventBus] or  [kafka]
 dopush.mq.pipeline=kafka
 
 # todo [xxl-job] switch
-dopush.xxl.job.enabled=false
+dopush.xxl.job.enabled=true
 
 # todo choose: [apollo]/[nacos] switch  ,if [apollo] and [nacos] both false, use local.properties
 dopush.apollo.enabled=false
@@ -14,7 +14,7 @@ dopush.nacos.enabled=false
 dopush.rule.engine.enabled=false
 
 # TODO if windows os and need upload file to send message  ,replace path !
-dopush.business.upload.crowd.path=/Users/long1/Desktop/DopushTemp
+dopush.business.upload.crowd.path=C:\\Users\\long1\\Desktop\\DopushTemp
 
 
 
