--- a/DoPush-Server/push-starter/src/main/resources/dynamic-tp-apollo-dtp.yml
+++ b/DoPush-Server/push-starter/src/main/resources/dynamic-tp-apollo-dtp.yml
@@ -19,7 +19,7 @@ spring:
           secret: SECb544445a6a34f0315d08b17de41
           receivers: 18888888888
       executors:
-        - threadPoolName: austin.im.notice
+        - threadPoolName: dopush.im.notice
           corePoolSize: 6
           maximumPoolSize: 8
           queueCapacity: 200
@@ -27,7 +27,7 @@ spring:
           rejectedHandlerType: CallerRunsPolicy    # 拒绝策略，查看RejectedTypeEnum枚举类
           keepAliveTime: 50
           allowCoreThreadTimeOut: false
-          threadNamePrefix: austin-           # 线程名前缀
+          threadNamePrefix: dopush-           # 线程名前缀
         - threadPoolName: execute-xxl-thread-pool
           corePoolSize: 3
           maximumPoolSize: 3
@@ -36,7 +36,7 @@ spring:
           rejectedHandlerType: CallerRunsPolicy    # 拒绝策略，查看RejectedTypeEnum枚举类
           keepAliveTime: 50
           allowCoreThreadTimeOut: false
-          threadNamePrefix: austin-           # 线程名前缀
+          threadNamePrefix: dopush-           # 线程名前缀
           notifyItems: # 报警项，不配置自动会配置（变更通知、容量报警、活性报警、拒绝报警）
             - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
               enabled: true
