--- a/DoPush-Server/push-stream/pom.xml
+++ b/DoPush-Server/push-stream/pom.xml
@@ -40,9 +40,27 @@
 
         <dependency>
             <groupId>com.sadalsuud.push</groupId>
-            <artifactId>push-infrastructure</artifactId>
+            <artifactId>push-common</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
 
     </dependencies>
     <build>
@@ -103,7 +121,6 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
 
         </plugins>
     </build>
