feat: 增加sql日志打印

--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -144,3 +144,11 @@ server.shutdown=graceful
 ########################################## dopush start ##########################################
 dopush.template.max-sending-time=2
 ########################################## dopush start ##########################################
+
+########################################## log start ##########################################
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root=info
+########################################## log end ##########################################
+
