fix: 解决Hibernate实体懒加载无法拉取问题

--- a/DoPush-Server/push-starter/src/main/resources/application.properties
+++ b/DoPush-Server/push-starter/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 spring.application.name=dopush
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 
 ########################################## database start ##########################################
